# rivals-2025-season

./: .gitignore  CameraReader.py  Cargo.toml  ImageLabeler.py  LVMConfigs.py  Makefile  ModelManager.py  PythonToC++.cpp  README.md  SettingsReader.py  ThreadHandler.py  birdies.yaml  custom_yoloworld_model.pt  dataset.yaml  lvm_settings.json  pencils.yaml
.cargo/: config.toml
datasets/birdies/images/: text_embeddings_clip_ViT-B_32.pt
datasets/birdies/labels/: train.cache  val.cache
datasets/birdies/labels/train/: WIN_20250928_10_34_15_Pro.txt  WIN_20250928_10_34_30_Pro.txt  WIN_20250928_10_34_50_Pro.txt  WIN_20250928_10_35_10_Pro.txt  WIN_20251115_15_39_00_Pro.txt  WIN_20251115_15_39_34_Pro.txt  WIN_20251115_15_39_46_Pro.txt  WIN_20251115_15_40_09_Pro.txt  WIN_20251115_15_40_37_Pro.txt  (+15 more)
datasets/coco8/labels/: train.cache  val.cache
datasets/dataset/: labels.cache
datasets/dataset/labels/: labels.txt  val.cache
datasets/pencils/images/: text_embeddings_clip_ViT-B_32.pt
datasets/pencils/labels/: train.cache
runs/detect/train/: args.yaml  results.csv
runs/detect/train16/: args.yaml
runs/detect/train17/: args.yaml
runs/detect/train18/: args.yaml
runs/detect/train2/: args.yaml  results.csv
runs/detect/train3/: args.yaml  results.csv
runs/detect/train4/: args.yaml  results.csv
runs/detect/train5/: args.yaml  results.csv
runs/detect/train6/: args.yaml
runs/detect/train7/: args.yaml  results.csv
src/: comms.rs  drivetrain.rs  intake.rs  main.rs  shooter.rs  sm.rs  statemachine.rs
src/driver_station/: main.py
src/hardware/: motor.rs
(+47 files in other folders)
