[package]
name = "rivals-2025-season"
version = "0.1.0"
edition = "2024"

[dependencies]
paste = "1.0.15"
phf = "0.13.1"
phf_shared = "0.13.1"
rmp-serde = "1.3.0"
rppal = "0.22.1"
rust_gpiozero = "0.2.1"
serde = { version = "1.0.228", features=["derive"] }
uom = "0.37.0"

[target.aarch64-unknown-linux-gnu]
linker = "C:/Program Files (x86)/Arm GNU Toolchain aarch64-none-linux-gnu/14.3 rel1/bin/aarch64-none-linux-gnu-ld.exe"
rustflags = [
    "-C", "link-arg=-L \"C:\\Program Files (x86)\\Arm GNU Toolchain aarch64-none-linux-gnu\\14.3 rel1\\lib\\gcc\\aarch64-none-linux-gnu\\14.3.1\""
]

[target.x86_64-unknown-linux-musl]
linker = "rust-lld"
